# yhteentoimivuusagentti

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  claude_desktop_config.docker.json  claude_desktop_config.example.json  config.yaml.example  docker-compose.yml  manifest.json  pyproject.toml  yhteentoimivuusalusta-mcp-project-plan-v1.1.md
docs/: API_REFERENCE.md  CONTRIBUTING.md  DOCKER.md  EXAMPLES.md  INSTALLATION.md  TROUBLESHOOTING.md  USAGE.md
scripts/: create_bundle.py  setup_claude_desktop.py
src/yhteentoimivuusalusta_mcp/: __init__.py  server.py
src/yhteentoimivuusalusta_mcp/clients/: __init__.py  base.py  koodistot.py  sanastot.py  tietomallit.py
src/yhteentoimivuusalusta_mcp/models/: __init__.py  schemas.py
src/yhteentoimivuusalusta_mcp/tools/: __init__.py  codelist.py  datamodel.py  terminology.py  unified.py  validation.py
src/yhteentoimivuusalusta_mcp/utils/: __init__.py  cache.py  config.py  fuzzy.py
tests/: __init__.py  conftest.py
tests/fixtures/: codes_response.json  concept_response.json  model_response.json  vocabulary_response.json
tests/test_clients/: test_koodistot.py  test_sanastot.py
tests/test_tools/: test_codelist.py  test_terminology.py  test_validation.py
tests/test_utils/: test_fuzzy.py
