[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yhteentoimivuusalusta-mcp"
version = "0.1.0"
description = "MCP server for Finland's Yhteentoimivuusalusta (Interoperability Platform)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jaakko" }
]
keywords = ["mcp", "finland", "interoperability", "terminology", "data-models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "diskcache>=5.6.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
nlp = [
    "rapidfuzz>=3.6.0",
]

[project.scripts]
yhteentoimivuusalusta-mcp = "yhteentoimivuusalusta_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yhteentoimivuusalusta_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
